--- a/Package.json
+++ b/Package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "node index.js"
   },
-  "author": "Linuxndroid",
-  "license": "linuxndroid",
+  "author": "Ranganna7702",
+  "license": "Ranganna7702",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
