--- a/Package.json
+++ b/Package.json
@@ -9,6 +9,7 @@
   "author": "Ranganna7702",
   "license": "Ranganna7702",
   "dependencies": {
+    "lodash": ">=4.17.19"
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.6.2",
